--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'com.google.guava:guava:19.0'
+    compile 'org.graphstream:gs-core:1.3'
+    compile 'org.graphstream:gs-ui:1.3'
+    compile 'org.graphstream:gs-algo:1.3'
 }
